--- a/.htaccess
+++ b/.htaccess
@@ -1,18 +1,9 @@
-<IfModule mod_rewrite.c>
-    RewriteEngine On
-    RewriteBase /web_banhoa/
-    
-    # Prevent direct access to config files
-    RewriteRule ^config/ - [F,L]
-    RewriteRule ^models/ - [F,L]
-    
-    # Allow access to existing files and directories
-    RewriteCond %{REQUEST_FILENAME} !-f
-    RewriteCond %{REQUEST_FILENAME} !-d
-</IfModule>
+Options +FollowSymLinks
+RewriteEngine On
+
+# Allow direct access to files and directories
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
 
 # Prevent directory listing
 Options -Indexes
-
-# Set default charset
-AddDefaultCharset UTF-8
